# lark-plugin-fastapi-sample

./: .gitignore  .replit  Makefile  Procfile  bun.lockb  index.html  main.py  package-lock.json  package.json  pyproject.toml  replit.nix  tailwind.config.js  vite.config.js
app/: __init__.py
app/lib/inertia/: inertia.py
app/routes/: index.py
frontend/: helper.js  main.js
frontend/assets/styles/: index.scss
frontend/components/: HelloWorld.vue
frontend/layouts/: Common.vue  Main.vue  main.vue
frontend/pages/: IndexPage.vue
lib/inertia/: __init__.py  inertia.py
templates/: manifest.json
templates/assets/: IndexPage-CuCaL9zV.js  IndexPage-Xd8LqoZo.css  OtherPage-BF1WdD3d.js  OtherPage-nhv-_QZP.css  main-DFgCPmmY.css  main-qIbk7E4-.js
