[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["sunzh231 <sunzh231@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
python-dotenv = "^1.0.1"
fastapi-inertia = "^0.1.4"
requests = "^2.32.3"
itsdangerous = "^2.2.0"
pydantic = "^2.7.4"
lib = "^4.0.0"
starlette = "^0.37.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
